<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.doubea.firebasekitchensink.Activities.LoggingActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <EditText
        android:id="@+id/logging_username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="93dp" />

    <EditText
        android:id="@+id/logging_email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="johndoe@aol.com"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="190dp" />

    <Button
        android:id="@+id/logging_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="277dp" />

    <TextView
        android:id="@+id/logging_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="399dp" />

    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:visibility="gone"/>


    </FrameLayout>
</ScrollView>
